--- a/filesearcher/src/main/res/values/styles.xml
+++ b/filesearcher/src/main/res/values/styles.xml
@@ -7,6 +7,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowTranslucentStatus">true</item>
+        <item name="actionMenuTextColor">@color/white</item>
     </style>
 
 </resources>
