--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,5 +7,9 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-
+    <style name="MTheme" parent="FileSearcherActivityTheme">
+        <item name="colorPrimaryDark">#212121</item>
+        <item name="colorPrimary">#424242</item>
+        <item name="colorAccent">@color/colorPrimary</item>
+    </style>
 </resources>
