--- a/filesearcher/src/main/res/values/styles.xml
+++ b/filesearcher/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="CustomTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="FileSearcherActivityTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -9,5 +9,13 @@
         <item name="android:windowTranslucentStatus">true</item>
         <item name="actionMenuTextColor">@color/white</item>
     </style>
+    <style name="FileSearcherDialogTheme"  parent="Theme.AppCompat.Dialog.Alert">
 
+    </style>
+
+    <style name="FileSearcherItemTextAppearance">
+        <item name="android:padding">10dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">18sp</item>
+    </style>
 </resources>
