--- a/filesearcher/src/main/res/values/styles.xml
+++ b/filesearcher/src/main/res/values/styles.xml
@@ -3,19 +3,20 @@
     <!-- Base application theme. -->
     <style name="FileSearcherActivityTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">#2196F3</item>
+        <item name="colorPrimaryDark">#1976D2</item>
+        <item name="colorAccent">#BBDEFB</item>
         <item name="android:windowTranslucentStatus">true</item>
         <item name="actionMenuTextColor">@color/white</item>
     </style>
-    <style name="FileSearcherDialogTheme"  parent="Theme.AppCompat.Dialog.Alert">
-
+    <style name="FileSearcherDialogTheme"  parent="Theme.AppCompat.DayNight.Dialog.Alert">
+        <item name="colorAccent">#2196F3</item>
     </style>
 
     <style name="FileSearcherItemTextAppearance">
-        <item name="android:padding">10dp</item>
+        <item name="android:layout_marginStart">5dp</item>
+        <item name="android:layout_marginEnd">5dp</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">16sp</item>
     </style>
 </resources>
