--- a/filesearcher/src/main/res/layout/file_searcher_item.xml
+++ b/filesearcher/src/main/res/layout/file_searcher_item.xml
@@ -1,53 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    app:cardUseCompatPadding="true"
-    app:cardCornerRadius="5dp"
-    app:contentPadding="5dp"
-    app:cardElevation="4dp">
-    <LinearLayout
+    android:layout_height="100dp"
+    xmlns:tools="http://schemas.android.com/tools">
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/icon"
-            android:visibility="gone"/>
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <TextView
-                android:id="@+id/file_searcher_item_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:maxLines="2"
-                style="@style/FileSearcherItemTextAppearance"
-                tools:text="Name: abcde.txt"/>
-            <TextView
-                android:id="@+id/file_searcher_item_location"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/FileSearcherItemTextAppearance"
-                tools:text="Location: C:\Users\will\Desktop"/>
-            <TextView
-                android:id="@+id/file_searcher_item_size"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/FileSearcherItemTextAppearance"
-                tools:text="Size: 14.1 MB (14,887,654 字节)"
-                />
-            <TextView
-                android:id="@+id/file_searcher_item_create_time"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/FileSearcherItemTextAppearance"
-                tools:text="Create Time: 2016‎年‎11‎月‎10‎日，‏‎15:34:47"
-                />
-        </LinearLayout>
-    </LinearLayout>
+            android:id="@+id/file_searcher_item_image_view"
+            android:layout_width="66dp"
+            android:layout_height="100dp"
+            android:src="@drawable/icon"/>
+        <TextView
+            android:id="@+id/file_searcher_item_text_title"
+            android:layout_toEndOf="@id/file_searcher_item_image_view"
+            android:layout_marginTop="17dp"
+            style="@style/FileSearcherItemTextViewAppearance"
+            tools:text="国祚密码"/>
+        <TextView
+            android:id="@+id/file_searcher_item_text_size"
+            android:layout_toEndOf="@id/file_searcher_item_image_view"
+            android:layout_below="@id/file_searcher_item_text_title"
+            style="@style/FileSearcherItemTextViewAppearance"
+            tools:text="Size:2.13Mb"/>
+        <TextView
+            android:id="@+id/file_searcher_item_text_location"
+            android:layout_toEndOf="@id/file_searcher_item_image_view"
+            android:layout_below="@id/file_searcher_item_text_size"
+            style="@style/FileSearcherItemTextViewAppearance"
+            tools:text="C:\document\国祚密码.text"/>
+    </RelativeLayout>
 </android.support.v7.widget.CardView>
