--- a/filesearcher/src/main/res/layout/file_searcher_main.xml
+++ b/filesearcher/src/main/res/layout/file_searcher_main.xml
@@ -1,36 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="24dp"
-        android:background="?attr/colorPrimaryDark"/>
     <android.support.v7.widget.Toolbar
+        android:id='@+id/file_searcher_main_toolbar'
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:id="@+id/file_searcher_main_toolbar"
+        android:background="?attr/colorPrimary"
         app:contentInsetStart="0dp"
-        android:background="?attr/colorPrimary">
-        <TextView
-            android:id="@+id/file_searcher_main_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-
-            android:maxLines="1"
-            android:textColor="?attr/actionMenuTextColor"
-            android:textSize="18sp"
-            tools:text="正在搜索目录: abcde"/>
+        app:contentInsetLeft="0dp"
+        app:title="@string/searching">
     </android.support.v7.widget.Toolbar>
-
-    <com.simplecityapps.recyclerview_fastscroll.views.FastScrollRecyclerView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/file_searcher_main_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:fastScrollThumbColor="?attr/colorPrimary"
-        app:fastScrollPopupBackgroundSize="10dp"/>
-</LinearLayout>
+        android:layout_below="@id/file_searcher_main_toolbar"/>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/file_searcher_main_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="15dp"/>
+</RelativeLayout>
