--- a/filesearcher/src/main/res/values/styles.xml
+++ b/filesearcher/src/main/res/values/styles.xml
@@ -6,17 +6,11 @@
         <item name="colorPrimary">#2196F3</item>
         <item name="colorPrimaryDark">#1976D2</item>
         <item name="colorAccent">#BBDEFB</item>
-        <item name="android:windowTranslucentStatus">true</item>
-        <item name="actionMenuTextColor">@color/white</item>
     </style>
-    <style name="FileSearcherDialogTheme"  parent="Theme.AppCompat.DayNight.Dialog.Alert">
-        <item name="colorAccent">#2196F3</item>
-    </style>
-
-    <style name="FileSearcherItemTextAppearance">
-        <item name="android:layout_marginStart">5dp</item>
-        <item name="android:layout_marginEnd">5dp</item>
-        <item name="android:textColor">@color/black</item>
+    <style name="FileSearcherItemTextViewAppearance">
+        <item name="android:layout_height">22dp</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 </resources>
