--- a/filesearcher/src/main/res/values/color.xml
+++ b/filesearcher/src/main/res/values/color.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#E8EAF6</color>
+    <color name="colorAccent">#c5cae9</color>
     <color name="black">#333333</color>
     <color name="white">#ffffff</color>
 </resources>
