--- a/filesearcher/src/main/res/values/color.xml
+++ b/filesearcher/src/main/res/values/color.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#c5cae9</color>
-    <color name="black">#333333</color>
+    <color name="fileSearcherPrimaryColor">#3F51B5</color>
+    <color name="fileSearcherPrimaryDarkColor">#303F9F</color>
+    <color name="fileSearcherAccentColor">#3f51b5</color>
+    <color name="fileSearcherTransparent">#00000000</color>
+    <color name="fileSearcherBlack">#333333</color>
     <color name="white">#ffffff</color>
+    <color name="gray">#808080</color>
 </resources>
