--- a/filesearcher/src/main/res/values/styles.xml
+++ b/filesearcher/src/main/res/values/styles.xml
@@ -3,23 +3,26 @@
     <!-- Base application theme. -->
     <style name="FileSearcherActivityTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/fileSearcherPrimaryColor</item>
+        <item name="colorPrimaryDark">@color/fileSearcherPrimaryDarkColor</item>
+        <item name="colorAccent">@color/fileSearcherAccentColor</item>
     </style>
     <style name="FileSearcherTransParentTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowIsTranslucent">true</item>
-        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowBackground">@color/fileSearcherTransparent</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowIsFloating">true</item>
         <item name="android:backgroundDimEnabled">false</item>
     </style>
     <style name="FileSearcherItemTextViewAppearance">
-        <item name="android:layout_height">22dp</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">match_parent</item>
-        <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">11sp</item>
+        <item name="android:textColor">@color/fileSearcherBlack</item>
+        <item name="android:layout_marginStart">5dp</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:ellipsize">end</item>
     </style>
     <style name="FileSearcherToolbarTitleAppearance">
         <item name="android:textSize">16sp</item>
