--- a/filesearcher/src/main/res/layout/file_searcher_main.xml
+++ b/filesearcher/src/main/res/layout/file_searcher_main.xml
@@ -2,15 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
     <android.support.v7.widget.Toolbar
         android:id='@+id/file_searcher_main_toolbar'
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
-        app:contentInsetStart="0dp"
-        app:contentInsetLeft="0dp"
         app:title="@string/searching"
+        app:contentInsetStartWithNavigation="0dp"
         app:titleTextAppearance="@style/FileSearcherToolbarTitleAppearance">
     </android.support.v7.widget.Toolbar>
     <android.support.v7.widget.RecyclerView
@@ -18,11 +18,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/file_searcher_main_toolbar"/>
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/file_searcher_main_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_margin="15dp"/>
+
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/file_searcher_main_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="15dp"
+            android:src="@drawable/check_holo_dark_no_padding_trimmed"
+            />
 </RelativeLayout>
