--- a/filesearcher/src/main/res/values/styles.xml
+++ b/filesearcher/src/main/res/values/styles.xml
@@ -23,8 +23,10 @@
         <item name="android:layout_marginStart">5dp</item>
         <item name="android:maxLines">1</item>
         <item name="android:ellipsize">end</item>
+        <item name="android:background">@null</item>
     </style>
-    <style name="FileSearcherToolbarTitleAppearance">
-        <item name="android:textSize">16sp</item>
+    <style name="FileSearcherToolbarTitleAppearance" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/fileSearcherWhite</item>
     </style>
 </resources>
