--- a/filesearcher/src/main/res/layout/file_searcher_main.xml
+++ b/filesearcher/src/main/res/layout/file_searcher_main.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
-        app:title="@string/searching"
+        app:title="@string/file_searcher_searching"
         app:contentInsetStartWithNavigation="0dp"
         app:titleTextAppearance="@style/FileSearcherToolbarTitleAppearance">
     </android.support.v7.widget.Toolbar>
