--- a/filesearcher/src/main/res/layout/file_searcher_main.xml
+++ b/filesearcher/src/main/res/layout/file_searcher_main.xml
@@ -29,4 +29,12 @@
             android:layout_margin="15dp"
             android:src="@drawable/check_holo_dark_no_padding_trimmed"
             />
+    <TextView
+        android:id='@+id/file_searcher_main_no_result_found'
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:text="@string/file_searcher_no_result_found"
+        android:visibility="gone"/>
 </RelativeLayout>
