--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.will.example.MainActivity">
 
-    <EditText
-        android:id="@+id/example_edit"
+   <android.support.design.widget.TextInputLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:padding="5dp"
+       android:hint="keyword:">
+       <EditText
+           android:id="@+id/example_keyword"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:maxLines="1"
+           />
+   </android.support.design.widget.TextInputLayout>
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:padding="10dp"/>
+        android:padding="5dp"
+        android:hint="extension:">
+        <EditText
+            android:id="@+id/example_extension"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            />
+    </android.support.design.widget.TextInputLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="5dp">
 
+        <EditText
+            android:id="@+id/example_min"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:inputType="numberSigned"
+            android:maxLines="1"
+            android:hint="Min"/>
+
+        <EditText
+            android:id="@+id/example_max"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:inputType="numberSigned"
+            android:maxLines="1"
+            android:hint="Max"/>
+    </LinearLayout>
+    <CheckBox
+        android:id="@+id/example_show_hidden"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="show hidden"/>
     <Button
         android:id="@+id/example_confirm"
         android:layout_width="match_parent"
